// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi-measure reports should show a tooltip with information about multi-measure reports 1`] = `
<table>
  <tbody>
    <tr
      key="0"
    >
      <td>
        <b>
          Count
          :
        </b>
      </td>
      <td>
        12
      </td>
    </tr>
    <tr
      key="1"
    >
      <td>
        <b>
          Duration
          :
        </b>
      </td>
      <td>
        2d 15s
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should inform if the actual value is less than 1% of the target value 1`] = `
<div>
  <span
    className="text"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Target duration: <b>10000ms</b><br/>Average duration: <b>1ms</b><br/>< 1% of the target value",
      }
    }
  />
  <DownloadButtonErrorHandler
    fileName="Exceeded-instances-test.csv"
    retriever={
      Object {
        "result": Object {
          "data": Array [
            Object {
              "processInstanceId": "test",
            },
          ],
        },
      }
    }
  >
    <Icon
      type="save"
    />
    Instance IDs
  </DownloadButtonErrorHandler>
</div>
`;

exports[`should show a tooltip with information about actual and target value 1`] = `
<div>
  <span
    className="text"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Target duration: <b>1ms</b><br/>Average duration: <b>2ms</b><br/>200% of the target value",
      }
    }
  />
  <DownloadButtonErrorHandler
    fileName="Exceeded-instances-test.csv"
    retriever={
      Object {
        "result": Object {
          "data": Array [
            Object {
              "processInstanceId": "test",
            },
          ],
        },
      }
    }
  >
    <Icon
      type="save"
    />
    Instance IDs
  </DownloadButtonErrorHandler>
</div>
`;

exports[`should show a tooltip with information if no actual value is available 1`] = `
<div>
  <span
    className="text"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Target duration: <b>1ms</b><br/>No actual value available.<br/>Cannot compare target and actual value.",
      }
    }
  />
  <DownloadButtonErrorHandler
    fileName="Exceeded-instances-test.csv"
    retriever={
      Object {
        "result": Object {
          "data": Array [
            Object {
              "processInstanceId": "test",
            },
          ],
        },
      }
    }
  >
    <Icon
      type="save"
    />
    Instance IDs
  </DownloadButtonErrorHandler>
</div>
`;
